--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -4,58 +4,48 @@
     name:
       - vim
 
-- name: Create undo directory
-  ansible.builtin.file:
-    path: ~/.vim/undo
-    state: directory
-
-- name: My UltiSnips
-  ansible.builtin.git:
-    repo: 'https://github.com/tinoschroeter/vim.UltiSnips.git'
-    dest: ~/.vim/UltiSnips
-    update: yes
-
-- name: add undo file 
-  ansible.builtin.file:
-    path: ~/.vim/undo
-
-- name: addon indentLine.vim
+- name: addon indentLine.vim (A light and configurable statusline/tabline plugin for Vim)
   ansible.builtin.git:
     repo: 'https://github.com/itchyny/lightline.vim.git'
     dest: ~/.vim/bundle/lightline.vim
     update: yes
 
-- name: addon mundo.vim
+- name: addon mundo.vim (A Vim plugin to visualizes the Vim undo tree.)
   ansible.builtin.git:
     repo: 'https://github.com/simnalamburt/vim-mundo.git'
     dest: ~/.vim/bundle/vim-mundo
     update: yes
 
-- name: addon nerdtree.vim
+- name: Create undo directory
+  ansible.builtin.file:
+    path: ~/.vim/undo
+    state: directory
+
+- name: addon nerdtree.vim (The NERDTree is a file system explorer for the Vim editor.)
   ansible.builtin.git:
     repo: 'https://github.com/scrooloose/nerdtree.git'
     dest: ~/.vim/bundle/nerdtree
     update: yes
 
-- name: addon ultisnips.vim
+- name: addon ultisnips.vim (UltiSnips is the ultimate solution for snippets in Vim.)
   ansible.builtin.git:
     repo: 'https://github.com/SirVer/ultisnips.git'
     dest: ~/.vim/bundle/ultisnips
     update: yes
 
-- name: addon vim-irblack.vim
+- name: addon vim-irblack.vim (Infinite Red's vim theme)
   ansible.builtin.git:
     repo: 'https://github.com/wgibbs/vim-irblack.git'
     dest: ~/.vim/bundle/vim-irblack
     update: yes
 
-- name: addon vim-prettier.vim
+- name: addon vim-prettier.vim (An opinionated code formatter)
   ansible.builtin.git:
     repo: 'https://github.com/prettier/vim-prettier.git'
     dest: ~/.vim/bundle/vim-prettier
     update: yes
 
-- name: addon vim-snippets.vim
+- name: addon vim-snippets.vim (This repository contains snippets files for various programming languages.)
   ansible.builtin.git:
     repo: 'https://github.com/honza/vim-snippets.git'
     dest: ~/.vim/bundle/vim-snippets
