update some stuff

--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -97,12 +97,12 @@
 - name: Extract /tmp/velero-v1.7.1-linux-amd64.tar.gz
   ansible.builtin.unarchive:
     src: /tmp/velero-v1.7.1-linux-amd64.tar.gz
-    dest: /tmp/velero
+    dest: /tmp
   become: yes
 
 - name: Copy velero binary
   ansible.builtin.copy:
-    src: /tmp/velero/velero
+    src: /tmp/velero-v1.7.1-linux-amd64/velero
     dest: /usr/local/bin/velero
 
 - name: Install nvm (Node Version Manager)
