--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -5,6 +5,21 @@
       - vim
   become: yes
 
+- name: Creates autoload directory
+  file:
+    path: ~/.vim/autoload
+    state: directory
+
+- name: Creates bundle directory
+  file:
+    path: ~/.vim/bundle
+    state: directory
+
+- name: install pathogen 
+  get_url:
+    url: https://raw.githubusercontent.com/tpope/vim-pathogen/master/autoload/pathogen.vim
+    dest: ~/.vim/autoload/pathogen.vim
+
 - name: addon indentLine.vim (A light and configurable statusline/tabline plugin for Vim)
   ansible.builtin.git:
     repo: 'https://github.com/itchyny/lightline.vim.git'
