--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -49,6 +49,12 @@
     dest: ~/.vim/bundle/ultisnips
     update: yes
 
+- name: setup my ultisnips
+  ansible.builtin.git:
+    repo: 'https://github.com/tinoschroeter/vim.UltiSnips.git'
+    dest: ~/.vim/UltiSnips
+    update: yes
+
 - name: addon vim-irblack.vim (Infinite Red's vim theme)
   ansible.builtin.git:
     repo: 'https://github.com/wgibbs/vim-irblack.git'
@@ -66,3 +72,9 @@
     repo: 'https://github.com/honza/vim-snippets.git'
     dest: ~/.vim/bundle/vim-snippets
     update: yes
+
+- name: Create symbolic link for vim_snippets
+  ansible.builtin.file:
+    src: ~/.vim/bundle/vim-snippets/autoload/vim_snippets.vim
+    dest: ~/.vim/autoload/vim_snippets.vim
+    state: link
