Set login shell to zsh

--- a/playbook/roles/system/tasks/main.yaml
+++ b/playbook/roles/system/tasks/main.yaml
@@ -1,3 +1,8 @@
 - name: Set timezone to Europe/Berlin
   community.general.timezone:
     name: Europe/Berlin
+
+- name: Set login shell of user {{ ansible_env.USER }} to `/bin/zsh` with `usermod`
+  ansible.builtin.command: usermod --shell /bin/zsh {{ ansible_env.USER }}
+  become: true
+  changed_when: false
