--- a/playbook/roles/vim/tasks/main.yaml
+++ b/playbook/roles/vim/tasks/main.yaml
@@ -65,6 +65,7 @@
   ansible.builtin.git:
     repo: 'https://github.com/prettier/vim-prettier.git'
     dest: ~/.vim/bundle/vim-prettier
+    update: no
 
 - name: addon vim-snippets.vim (This repository contains snippets files for various programming languages.)
   ansible.builtin.git:
