--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -157,6 +157,30 @@
     mode: '0555'
   become: yes
 
+- name: get and install argocd cli 
+  ansible.builtin.get_url:
+    url: https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+    dest: /usr/local/bin/argocd
+    mode: '0555'
+  become: yes
+
+- name: get argo cli 
+  ansible.builtin.get_url:
+    url: https://github.com/argoproj/argo-workflows/releases/download/v3.2.6/argo-linux-amd64.gz
+    dest: /tmp
+
+- name: Extract argo-linux-amd64.gz
+  ansible.builtin.shell:
+    cmd: ls /tmp/argo-linux-amd64 || gunzip argo-linux-amd64.gz
+    chdir: /tmp
+
+- name: Copy argo cli binary
+  ansible.builtin.copy:
+    src: /tmp/argo-linux-amd64
+    dest: /usr/local/bin/argo
+    mode: '0555'
+  become: yes
+
 - name: Install nvm (Node Version Manager)
   ansible.builtin.shell:
     cmd: ls ~/.nvm || curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash 
