--- a/playbook/roles/npm/tasks/main.yaml
+++ b/playbook/roles/npm/tasks/main.yaml
@@ -3,5 +3,6 @@
     global: yes
     name: "{{ item }}"
   with_items:
-    - snyk  # Find and automatically fix vulnerabilities in your code.
+    - snyk    # Find and automatically fix vulnerabilities in your code.
+    - swagger # Swagger utilities and project lifecycle support.
   become: yes
