--- a/playbook/roles/pip/tasks/main.yaml
+++ b/playbook/roles/pip/tasks/main.yaml
@@ -2,4 +2,5 @@
   pip:
     name: "{{ item }}"
   with_items:
-    - pipenv  # creates and manages a virtualenv for your projects.
+    - pipenv    # creates and manages a virtualenv for your projects.
+    - salt-lint # checks Salt State files (SLS) for best practices and behavior that could potentially be improved.
