--- a/playbook/roles/software/tasks/main.yaml
+++ b/playbook/roles/software/tasks/main.yaml
@@ -47,6 +47,7 @@
       - aspell-de 
       - aspell-en
       - lolcat            # color output
+      - rdesktop          # RDP client for Windows Terminal Server 
   become: yes
 
 - name: Install AWS CLI
