--- a/playbook/roles/npm/tasks/main.yaml
+++ b/playbook/roles/npm/tasks/main.yaml
@@ -6,4 +6,5 @@
     - snyk       # Find and automatically fix vulnerabilities in your code.
     - swagger    # Swagger utilities and project lifecycle support.
     - yarn       # FAST, RELIABLE, AND SECURE DEPENDENCY MANAGEMENT.
+    - pkg        # Package your Node.js project into an executable that can be run even on devices without Node.js installed.
   become: yes
